fix spacing variables to use new ones

--- a/static/buttons.css
+++ b/static/buttons.css
@@ -2,10 +2,10 @@
     /* sizing */
     --btn-height: 42px;
     --btn-height-cta: 58px;
-    --btn-padding-x: var(--spacing-large);
+    --btn-padding-x: var(--spacing-8x);
     --btn-font-size: 14px;
     --btn-font-weight: 600;
-    --btn-border-radius: var(--border-radius-small);
+    --btn-border-radius: var(--border-radius-1x);
 
     /* animation */
     --btn-transition: background-color 0.2s ease,
@@ -34,7 +34,7 @@
     --btn-ghost-active-text: var(--color-text-strong);
     --btn-ghost-focus-shadow: var(--color-secondary-focus-visible);
 
-        /* disabled */
+    /* disabled */
     --btn-disabled-bg: transparent;
     --btn-disabled-border: var(--color-disabled);
     --btn-disabled-text: var(--color-disabled);
